// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Source builtInVars.4gl 1`] = `
main

    let x, y = arg_val
    let x, y = arr_count
    let x, y = arr_cur
    let x, y = sqlca
    
end main
----------
    LET
 

`;

exports[`Source empty_main.4gl 1`] = `
main

end main
----------
END
MAIN

`;

exports[`Source globals.4gl 1`] = `
globals "abc.txt"

  globals
    DEFINE NOME CHAR(50) # abc
      DEFINE NOME CHAR(50) # abc
        DEFINE NOME CHAR(50) # abc

    DEFINE NOME2 CHAR(50) # abc
end globals




main
call xxxxx()



call xxxxx()



call xxxxx()



call xxxxx()
end main
----------
GLOBALS "abc.txt"

DEFINE
 CALL
xxxxx

`;

exports[`Source strings.4gl 1`] = `
main

    let x, y = ''
    let x, y = 'ABC,DEF'
    let x, y = '"'
    let x, y = 'ABC\\'DEF'
    
end main

function f1()

    let x, y = ""
    let x, y = "ABC,DEF"
    let x, y = "'"
    let x, y = "ABC\\"DEF"
    
end function
----------
LET
 LET
 

`;
